# miio-cpp-rewrite

./: .gitignore  CMakeLists.txt  Device.cpp  Device.h  MiioDevice.cpp  README.md  aes.h  md5.h  socket_class.cpp  socket_class.h  test.cpp  type_tools.h
